--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rosco",
+  "name": "jess",
   "version": "1.0.0",
   "description": "",
   "license": "MIT",
@@ -15,14 +15,13 @@
     "@babel/preset-react": "^7.6.3",
     "@babel/preset-typescript": "^7.6.0",
     "babel-loader": "^8.0.6",
-    "node-sass": "^4.12.0",
     "html-webpack-plugin": "^3.2.0",
+    "styled-components": "^5.0.1",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.5",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.1.1",
-    "webpack-dev-server": "^3.10.3",
-    "styled-components": "^5.0.1"
+    "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
     "@babel/polyfill": "^7.8.3",
@@ -35,6 +34,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
+    "sass": "^1.50.1",
     "sass-loader": "^7.2.0",
     "style-loader": "^0.23.0",
     "typeface-roboto": "0.0.75",
